Switched all the endpoints to use UUIDs (#73)
* Converted the endpoints to use Guids instead

* Fixed all necessary build issues

* Refactored the documentation a bit

* Regenerated the API

* Changed one nav property
